--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
    <p>My <strong><a href="https://www.facebook.com/david.marsovszky">facebook</a></strong> account</p>
    <p>My <strong><a href="https://www.instagram.com/david_marsovszky/?hl=sk">Instagram</a></strong> account</p>
 
-   <p><a href="Contact me.html">Contact me</a></p>
+   <p><a href="contact-me.html">Contact me</a></p>
 
 </body>
 
