--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   </table>
 
   <br>
-  <p>I am 20 years old, vegetarian, student at Comenius university, 2nd grade, I have big variety of interests I like reading books, shaping my body in gym, I enjoy conversations with beautiful people, I love filling people´s demands and acquiring money for that.</p>
+  <p>I am 22 years old, vegetarian, student at Comenius university, 4nd grade, I have big variety of interests I like reading books, shaping my body in gym, I enjoy conversations with interesting people. In free time I study international affairs, diplomacy, foreign policy, geopolitcs, I also get invited on international conferences reagrding these subjects (lastly I attended conference in Warsaw, which took place there septembre 2021 organised by the 3 Seas Initiative) </p>
   <hr>
   <h3><em>Education</emhttps://www.instagram.com/p/BZqMmXFh7NM/></em></h3>
 
@@ -42,8 +42,12 @@
        <td><em>2010-2018</em></td>
     </tr>
     <tr>
-     <td><em>University</em></td>
-      <td><em>2018-present</em></td>
+     <td><em>University (Bachelor)</em></td>
+      <td><em>2018-2021</em></td>
+    </tr>
+       <tr>
+     <td><em>University (Master)</em></td>
+      <td><em>2021-present</em></td>
     </tr>
     </tbody>
     <tfoot>
@@ -67,16 +71,16 @@
 
     <tbody>
     <tr>
-    <td>Talking with women</td>
-    <td>⭐</td>
+    <td>Rhetoric</td>
+    <td>⭐⭐⭐</td>
     <td>Working out</td>
-    <td>⭐⭐</td>
+    <td>⭐⭐⭐</td>
     </tr>
     <tr>
     <td>Knowledge of History</td>
     <td>⭐⭐⭐⭐</td>
-    <td>Penny-pitching</td>
-    <td>⭐⭐⭐⭐⭐</td>
+    <td>Problem solving</td>
+    <td>⭐⭐⭐⭐</td>
     </tr>
     <tr>
       <td>Studying</td>
