--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   </table>
 
   <br>
-  <p>I am 22 years old, vegetarian, student at Comenius university, 4nd grade, I have big variety of interests I like reading books, shaping my body in gym, I enjoy conversations with interesting people. In free time I study international affairs, diplomacy, foreign policy, geopolitcs, I also get invited on international conferences reagrding these subjects (lastly I attended conference in Warsaw, which took place there septembre 2021 organised by the 3 Seas Initiative) </p>
+  <p>I am 22 years old, vegetarian, student at Comenius university, 4nd grade, I have big variety of interests I like reading books, shaping my body in gym, I enjoy conversations with interesting people. In free time I study international affairs, diplomacy, foreign policy, geopolitcs, I also get invited on international conferences reagrding these subjects (lastly I attended conference in Warsaw, which took place there in septembre 2021 organised by the 3 Seas Initiative) </p>
   <hr>
   <h3><em>Education</emhttps://www.instagram.com/p/BZqMmXFh7NM/></em></h3>
 
