--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <table cellspacing="20">
 
 <tr>
-<td><img src="https://instagram.fprg2-1.fna.fbcdn.net/v/t51.2885-19/s150x150/47694734_2228994754040824_320784600462786560_n.jpg?_nc_ht=instagram.fprg2-1.fna.fbcdn.net&_nc_ohc=8p8uu-STZ9gAX8CiNQV&oh=112a5e279ce32ebb874223f1904af30d&oe=5EADF1F4" alt="Marsovszky photo"></td>
+<td><img src="https://www.instagram.com/p/CTHy5qYKjLT/" alt="Marsovszky photo"></td>
 <td><h1>Leonardo David Marsovszky</h1><p><em>Student at university and young guy with many hobbies</em></p></td>
   </tr>
   </table>
