--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <table cellspacing="20">
 
 <tr>
-<td><img src="https://www.instagram.com/p/CTHzsaAqv3T/" alt="Marsovszky photo"></td>
+<td><img src="" alt="Marsovszky photo"></td>
 <td><h1>Leonardo David Marsovszky</h1><p><em>Student at university and young guy with many hobbies</em></p></td>
   </tr>
   </table>
