--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <table cellspacing="20">
 
 <tr>
-<td><img src="https://www.instagram.com/p/CTHy5qYKjLT/" alt="31943151_1684065075020759_8815549078029991936_n (2).jpg"></td>
+<td><img src="" alt=""></td>
 <td><h1>Leonardo David Marsovszky</h1><p><em>Student at university and young guy with many hobbies</em></p></td>
   </tr>
   </table>
