--- a/contact-me.html
+++ b/contact-me.html
@@ -7,8 +7,8 @@
   </head>
   <body>
     <h1>Contact info</h1>
-    <p>E-mail adress : david.marsovszky@gmail.com</p>
-    <p>Telephone number : +421 911 509 253 </p>
+    <p>E-mail adress : </p>
+    <p>Telephone number :  </p>
     <hr>
 
    <table cellspacing="20">
