--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   </table>
 
   <br>
-  <p>I am 22 years old, vegetarian, student at Comenius university, 4nd grade, I have big variety of interests I like reading books, shaping my body in gym, I enjoy conversations with interesting people. In free time I study international affairs, diplomacy, foreign policy, geopolitcs, I also get invited on international conferences reagrding these subjects (lastly I attended conference in Warsaw, which took place there in septembre 2021 organised by the 3 Seas Initiative) </p>
+  <p>I am 23 years old, vegetarian, student. I have big variety of interests I like reading books, shaping my body in gym, I enjoy conversations with interesting people. In free time I study international affairs, diplomacy, foreign policy, geopolitcs. </p>
   <hr>
   <h3><em>Education</emhttps://www.instagram.com/p/BZqMmXFh7NM/></em></h3>
 
@@ -98,8 +98,8 @@
 
   <hr>
     <h3><em>My contact details</em></h3>
-   <p>My <strong><a href="https://www.facebook.com/david.marsovszky">facebook</a></strong> account</p>
-   <p>My <strong><a href="https://www.instagram.com/david_marsovszky/?hl=sk">Instagram</a></strong> account</p>
+   <p>My <strong><a href="">facebook</a></strong> account</p>
+   <p>My <strong><a href="">Instagram</a></strong> account</p>
 
    <p><a href="contact-me.html">Contact me</a></p>
 
